fix: removed margin for navigation on mobile

--- a/styles/screens.scss
+++ b/styles/screens.scss
@@ -12,10 +12,6 @@
       font-size: 16px !important;
     }
 
-    ul li a {
-      margin: 0 10px !important;
-    }
-
     .fa-brands {
       font-size: 16px !important;
     }
